--- a/client/src/index.css
+++ b/client/src/index.css
@@ -129,3 +129,32 @@ button:focus-visible {
     background-color: rgb(0, 174, 94);
   color: white;
 }
+
+.export_tabs{
+  display: flex;
+    gap: 0.5rem;
+}
+
+.export_tab{
+  font-size: 1.5rem;
+  aspect-ratio: 1/1;
+  padding: 0.7rem;
+  background-color: #e6e6e6;
+  cursor: pointer;
+  transition: background-color 0.25s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  font-weight: bold;
+  border-radius: 4rem;
+}
+
+.export_tab input[type="radio"] {
+  display: none;
+}
+
+.export_tab:has(input[type="radio"]:checked) {
+  background-color: rgb(0, 174, 94);
+  color: white;
+}
